// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get all urls from page with domain filtering 1`] = `
Array [
  Array [
    Array [
      "Page B",
    ],
    "https://my-super-cool-domain.com/pageB",
  ],
  Array [
    Array [
      "Page C",
    ],
    "https://my-super-cool-domain.com/pageC",
  ],
  Array [
    Array [
      "Page D",
    ],
    "https://my-super-cool-domain.com/pageD",
  ],
]
`;

exports[`get all urls from page without domain filtering 1`] = `
Array [
  Array [
    Array [
      "Page B",
    ],
    "https://my-super-cool-domain.com/pageB",
  ],
  Array [
    Array [
      "Page C",
    ],
    "https://my-super-cool-domain.com/pageC",
  ],
  Array [
    Array [
      "Page D",
    ],
    "https://my-super-cool-domain.com/pageD",
  ],
  Array [
    Array [
      "Case studies",
    ],
    "https://wiprodigital.com/what-we-do#wdwork_cases",
  ],
  Array [
    Array [
      "Case Study",
      "Delivering an exceptional mortgage customer experience for Allied Irish Bank",
    ],
    "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/",
  ],
  Array [
    Array [
      "some other domain",
    ],
    "https://some-other-domain",
  ],
]
`;

exports[`print sitemap 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Object {
    "links": Array [
      Object {
        "details": Array [
          Array [
            "Page B",
          ],
          "https://my-super-cool-domain.com/pageB",
        ],
        "links": Array [
          Object {
            "details": Array [
              Array [
                "Page C",
              ],
              "https://my-super-cool-domain.com/pageC",
            ],
            "links": Array [
              Object {
                "details": Array [
                  Array [
                    "Page F",
                  ],
                  "https://my-super-cool-domain.com/pageF",
                ],
                "links": Array [],
                "parent": "https://my-super-cool-domain.com/pageC",
              },
            ],
            "parent": "https://my-super-cool-domain.com/pageA",
          },
          Array [
            Array [
              "Page C",
            ],
            "https://my-super-cool-domain.com/pageA",
          ],
          Object {
            "details": Array [
              Array [
                "Page E",
              ],
              "https://my-super-cool-domain.com/pageE",
            ],
            "links": Array [
              Object {
                "details": Array [
                  Array [
                    "Page G",
                  ],
                  "https://my-super-cool-domain.com/pageG",
                ],
                "links": Array [
                  Object {
                    "details": Array [
                      Array [
                        "Page X",
                      ],
                      "https://my-super-cool-domain.com/pageX",
                    ],
                    "links": Array [],
                    "parent": "https://my-super-cool-domain.com/pageG",
                  },
                ],
                "parent": "https://my-super-cool-domain.com/pageE",
              },
            ],
            "parent": "https://my-super-cool-domain.com/pageB",
          },
        ],
        "parent": "https://my-super-cool-domain.com/pageA",
      },
      Object {
        "details": Array [
          Array [
            "Page C",
          ],
          "https://my-super-cool-domain.com/pageC",
        ],
        "links": Array [
          Object {
            "details": Array [
              Array [
                "Page F",
              ],
              "https://my-super-cool-domain.com/pageF",
            ],
            "links": Array [],
            "parent": "https://my-super-cool-domain.com/pageC",
          },
        ],
        "parent": "https://my-super-cool-domain.com/pageA",
      },
      Object {
        "details": Array [
          Array [
            "Page D",
          ],
          "https://my-super-cool-domain.com/pageD",
        ],
        "links": Array [],
        "parent": "https://my-super-cool-domain.com/pageA",
      },
    ],
  },
}
`;

exports[`print sitemap with circular link 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Object {
    "links": Array [
      Object {
        "details": Array [
          Array [
            "Page B",
          ],
          "https://my-super-cool-domain.com/pageB",
        ],
        "links": Array [
          Array [
            Array [
              "Page A",
            ],
            "https://my-super-cool-domain.com/pageA",
          ],
        ],
        "parent": "https://my-super-cool-domain.com/pageA",
      },
    ],
  },
}
`;

exports[`traverse dummy page 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Object {
    "links": Array [
      Array [
        Array [
          "Page B",
        ],
        "https://my-super-cool-domain.com/pageB",
      ],
      Array [
        Array [
          "Page C",
        ],
        "https://my-super-cool-domain.com/pageC",
      ],
      Array [
        Array [
          "Page D",
        ],
        "https://my-super-cool-domain.com/pageD",
      ],
    ],
  },
  "https://my-super-cool-domain.com/pageB": Object {
    "details": Array [
      Array [
        "Page B",
      ],
      "https://my-super-cool-domain.com/pageB",
    ],
    "links": Array [
      Array [
        Array [
          "Page C",
        ],
        "https://my-super-cool-domain.com/pageC",
      ],
      Array [
        Array [
          "Page C",
        ],
        "https://my-super-cool-domain.com/pageA",
      ],
      Array [
        Array [
          "Page E",
        ],
        "https://my-super-cool-domain.com/pageE",
      ],
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
  },
  "https://my-super-cool-domain.com/pageC": Object {
    "details": Array [
      Array [
        "Page C",
      ],
      "https://my-super-cool-domain.com/pageC",
    ],
    "links": Array [
      Array [
        Array [
          "Page F",
        ],
        "https://my-super-cool-domain.com/pageF",
      ],
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
  },
  "https://my-super-cool-domain.com/pageD": Object {
    "details": Array [
      Array [
        "Page D",
      ],
      "https://my-super-cool-domain.com/pageD",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageA",
  },
  "https://my-super-cool-domain.com/pageE": Object {
    "details": Array [
      Array [
        "Page E",
      ],
      "https://my-super-cool-domain.com/pageE",
    ],
    "links": Array [
      Array [
        Array [
          "Page G",
        ],
        "https://my-super-cool-domain.com/pageG",
      ],
    ],
    "parent": "https://my-super-cool-domain.com/pageB",
  },
  "https://my-super-cool-domain.com/pageF": Object {
    "details": Array [
      Array [
        "Page F",
      ],
      "https://my-super-cool-domain.com/pageF",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageC",
  },
  "https://my-super-cool-domain.com/pageG": Object {
    "details": Array [
      Array [
        "Page G",
      ],
      "https://my-super-cool-domain.com/pageG",
    ],
    "links": Array [
      Array [
        Array [
          "Page X",
        ],
        "https://my-super-cool-domain.com/pageX",
      ],
    ],
    "parent": "https://my-super-cool-domain.com/pageE",
  },
  "https://my-super-cool-domain.com/pageX": Object {
    "details": Array [
      Array [
        "Page X",
      ],
      "https://my-super-cool-domain.com/pageX",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageG",
  },
}
`;
